--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -20,10 +20,27 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+img {
+  height: 325px;
+  width: 550px;
+  margin: 20px;
+}
+td {
+  text-align: center;
+  font-size: 25px;
+  color:#FC5B2A;
+}
+a {
+  text-decoration: none;
 
+}
+.body {
+  background-color: #F8E9E9;
+  // opacity: 0.5;
+}
 .main {
   width: 100%;
-  background-color: #DF6955;
+  background-color: #FC5B2A;
 
   // margin: 0 auto;
 }
@@ -51,7 +68,15 @@ time, mark, audio, video {
   height: auto;
   opacity: 0.8;
 }
-
+.row p {
+  // width: 70%;
+  text-align: center;
+  margin: 0 auto;
+  color: #F8E9E9;
+  font-size: 50px;
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
 .row {
   width: 80%;
   margin: 0 auto;
