--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,7 @@ block content
         a(href='/Portfolio') Portfolio
         a(href='/About') About
         a(href='/Contact') Contact Me
+        a(href='/SendGrid') SendGrid
     div.main  
       div.row
         p I am an educator turned full stack developer. I am enspired by others,
