--- a/views/contact.jade
+++ b/views/contact.jade
@@ -4,9 +4,9 @@ block content
     div.row
       div.header
         h3 Contact Me
-        a(href='/Portfolio') Portfolio
-        a(href='/About') About
-        a(href='/Contact') Contact Me
+        a(href='/') Portfolio
+        a(href='/about') About
+        a(href='/contact') Contact Me
     div.main  
       div.row
         form(action='/contact' method='post')
