--- a/views/index.jade
+++ b/views/index.jade
@@ -5,10 +5,9 @@ block content
     div.row
       div.header
         h3 Claire Nessler
-        a(href='/Portfolio') Portfolio
-        a(href='/About') About
-        a(href='/Contact') Contact Me
-        a(href='/SendGrid') SendGrid
+        a(href='/') Portfolio
+        a(href='/about') About
+        a(href='/contact') Contact Me
     div.main  
       div.row
         p I am an educator turned full stack developer. I am enspired by others,
