--- a/views/about.jade
+++ b/views/about.jade
@@ -1,3 +1,19 @@
 extends layout
+
 block content
-  h1 About Me
+  div.body
+    div.row
+      div.header
+        h3 Claire Nessler
+        a(href='/') Portfolio
+        a(href='/about') About
+        a(href='/contact') Contact Me
+    div.main  
+      div.row
+        div.half
+          p I am a recently returned Peace Corps Volunteer turned tech. I love to be outdoors and one
+           | with nature. I dig sports and travel. I love being around others and the smell of coffee
+           | in the morning. In my free time I enjoy a hike where I can smell the pine, painting, reading,
+           | and writing. I cannot get enough of learning which is what has led me to being a dev. It is a
+           | source for constant growth and knowledge. There will always be more to do and more to investigate.
+           | In the near future I would like to visit China, and pick up rock climbing.
