--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,17 +31,18 @@ img {
 td {
   text-align: center;
   font-size: 25px;
-  color: #FC5B2A; }
+  color: #C0C8EA; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #C0C8EA; }
 
 .body {
-  background-color: #F8E9E9; }
+  background-color: #3E0063; }
 
 .main {
   width: 100%;
-  background-color: #FC5B2A; }
+  background-color: #C0C8EA; }
 
 .right {
   float: right; }
@@ -67,7 +68,7 @@ a {
 .row p {
   text-align: center;
   margin: 0 auto;
-  color: #F8E9E9;
+  color: #3E0063;
   font-size: 50px;
   padding-top: 35px;
   padding-bottom: 35px; }
@@ -112,7 +113,7 @@ h1, h2, h3, h4 {
   font-weight: inherit;
   line-height: 1.2;
   font-family: 'Philosopher';
-  color: #DF6955; }
+  color: #C0C8EA; }
 
 h1 {
   margin-top: 0;
@@ -129,14 +130,14 @@ h4 {
 
 h5, h6 {
   font-weight: bolder;
-  color: #DF6955; }
+  color: #C0C8EA; }
 
 small, .font_small {
   font-size: 0.707em; }
 
 form {
   border-radius: 10px;
-  color: white;
+  color: #DF6955;
   width: 100%;
   margin: 0 auto;
   text-align: center;
