--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -28,21 +28,20 @@ img {
 td {
   text-align: center;
   font-size: 25px;
-  color:#FC5B2A;
+  color:#C0C8EA;
 }
 a {
   text-decoration: none;
+	color: #C0C8EA;
 
 }
 .body {
-  background-color: #F8E9E9;
+  background-color: #3E0063;
   // opacity: 0.5;
 }
 .main {
   width: 100%;
-  background-color: #FC5B2A;
-
-  // margin: 0 auto;
+  background-color: #C0C8EA;
 }
 .right {
   float: right;
@@ -72,7 +71,7 @@ a {
   // width: 70%;
   text-align: center;
   margin: 0 auto;
-  color: #F8E9E9;
+  color: #3E0063;
   font-size: 50px;
   padding-top: 35px;
   padding-bottom: 35px;
