--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -26,7 +26,7 @@ h1, h2, h3, h4 {
   font-weight: inherit;
   line-height: 1.2;
   font-family: 'Philosopher';
-  color: $peach;
+  color: #C0C8EA;
 }
 
 h1 {
@@ -42,7 +42,7 @@ h4 {font-size: 1.414em;}
 
 h5,  h6 {
   font-weight: bolder;
-  color: $peach;
+  color: #C0C8EA;
 }
 
 small, .font_small {font-size: 0.707em;}
