--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,11 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline; }
 
+#size {
+  font-size: 25px; }
+
 img {
+  padding-top: 8%;
   height: 325px;
   width: 550px;
   margin: 20px; }
