--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -20,7 +20,13 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+#size {
+	font-size: 25px;
+}
+
 img {
+	padding-top: 8%;
   height: 325px;
   width: 550px;
   margin: 20px;
