--- a/views/about.jade
+++ b/views/about.jade
@@ -19,3 +19,7 @@ block content
            | In the near future I would like to visit China, and pick up rock climbing.
         div.colHalf
           img(src='/images/headshot.png')
+    div.row
+      p
+      p
+      p
