--- a/views/contact.jade
+++ b/views/contact.jade
@@ -22,4 +22,8 @@ block content
           p  
           input.submit(type='submit' value='Send Message')
           p
+    div.row
+      p
+      p
+      p
   script(src='/javascripts/dom.js' type='text/javascript')
