--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -3,11 +3,6 @@
 @import url(http://fonts.googleapis.com/css?family=Maven+Pro:400,500);
 @import url(http://fonts.googleapis.com/css?family=Philosopher:400,700);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
-$blueGrey: #6D8397;
-$blue: #307FA7;
-$green: #3D8C7D;
-$peach: #DF6955;
-$red: #BC242C;
 
 html {font-size: 1em;}
 
@@ -16,7 +11,7 @@ body {
   font-family: 'Open Sans', serif;
   font-weight: 400;
   line-height: 1.7;
-  color: $blue;
+  color: #3E0063;
 }
 
 p {margin-bottom: 1.3em;}
