--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,5 +1,3 @@
-$peach: #DF6955;
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -28,8 +26,8 @@ time, mark, audio, video {
 img {
 	padding-top: 8%;
   height: 325px;
-  width: 550px;
-  margin: 20px;
+  width: 50%;
+  // margin: 20px;
 }
 td {
   text-align: center;
@@ -53,27 +51,7 @@ a {
   float: right;
 }
 
-.imgback {
-  position: relative;
-  overflow: hidden;
-}
-
-.imgback p {
-  position: relative;
-  z-index: 2;
-  color: white;
-  margin: 5px;
-}
-
-.imgback img {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: auto;
-  opacity: 0.8;
-}
-.row p {
+.row p, .content {
   // width: 70%;
   text-align: center;
   margin: 0 auto;
@@ -83,7 +61,7 @@ a {
   padding-bottom: 35px;
 }
 .row {
-  width: 80%;
+  width: 960px;
   margin: 0 auto;
 }
 
