--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -4,10 +4,13 @@
 @import url(http://fonts.googleapis.com/css?family=Philosopher:400,700);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
 
-html {font-size: 1em;}
+html {
+  background-color: #3E0063;
+  font-size: 1em;
+}
 
 body {
-  background-color: white;
+  background-color: #C0C8EA;
   font-family: 'Open Sans', serif;
   font-weight: 400;
   line-height: 1.7;
