--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
     div.main  
       div.row
         p I am an educator turned full stack developer. I am enspired by others,
-         | solving problem, and life. I strive for team development and implementation.
+         | solving problems, and life. I strive for team development and implementation.
          
     div.row     
       div.content
